--- a/ViewModeSwitch/ViewModeSwitch.html
+++ b/ViewModeSwitch/ViewModeSwitch.html
@@ -1,1 +1,22 @@
 
+<div id="cbp-vm" class="cbp-vm-switcher cbp-vm-view-grid">
+	<div class="cbp-vm-options">
+		<a href="#" class="cbp-vm-icon cbp-vm-grid cbp-vm-selected" data-view="cbp-vm-view-grid">Grid View</a>
+		<a href="#" class="cbp-vm-icon cbp-vm-list" data-view="cbp-vm-view-list">List View</a>
+	</div>
+	<ul>
+		<li>
+			<a class="cbp-vm-image" href="#"><img src="images/1.png"></a>
+			<h3 class="cbp-vm-title">Silver beet</h3>
+			<div class="cbp-vm-price">$19.90</div>
+			<div class="cbp-vm-details">
+				Silver beet shallot wakame tomatillo salsify mung bean beetroot groundnut.
+			</div>
+			<a class="cbp-vm-icon cbp-vm-add" href="#">Add to cart</a>
+		</li>
+		<li>
+			<!--  ... -->
+		</li>
+		<!--  ... -->
+	</ul>
+</div>
