starting point again

--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -11,6 +11,7 @@
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<script src="js/scripts.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -177,18 +178,7 @@
 				</ul>
 			</div>
 		</div>
-		<script>
-			$( function() {
-				/*
-				- how to call the plugin:
-				$( selector ).cbpNTAccordion( [options] );
-				- destroy:
-				$( selector ).cbpNTAccordion( 'destroy' );
-				*/
-
-				$( '#cbp-ntaccordion' ).cbpNTAccordion();
-
-			} );
-		</script>
+		<script src="js/scripts.js"></script>
+		<script src="js/scripts.js"></script>
 	</body>
 </html>
