--- a/MultiColumnForm/index.html
+++ b/MultiColumnForm/index.html
@@ -11,6 +11,7 @@
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<script src="js/scripts.js"></script>
 	</head>
 	<body>
 		<div class="container">
