--- a/ViewModeSwitch/index.html
+++ b/ViewModeSwitch/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Blueprint: View Mode Switch</title>
 		<meta name="description" content="Blueprint: View Mode Switch" />
 		<meta name="keywords" content="view mode, switch, css, style, grid, list, template" />
@@ -11,7 +11,7 @@
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<script src="js/modernizr.custom.js"></script>
+		<script src="js/scripts.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -24,7 +24,7 @@
 					<a href="http://tympanus.net/codrops/?p=15656" class="bp-icon bp-icon-drop" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
 					<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
 				</nav>
-			</header>	
+			</header>
 			<div class="main">
 				<div id="cbp-vm" class="cbp-vm-switcher cbp-vm-view-grid">
 					<div class="cbp-vm-options">
@@ -144,7 +144,7 @@
 				</div>
 			</div><!-- /main -->
 		</div><!-- /container -->
-		<script src="js/classie.js"></script>
-		<script src="js/cbpViewModeSwitch.js"></script>
+		<script src="js/script.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
