--- a/ViewModeSwitch/index.html
+++ b/ViewModeSwitch/index.html
@@ -144,7 +144,6 @@
 				</div>
 			</div><!-- /main -->
 		</div><!-- /container -->
-		<script src="js/script.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/scripts.js"></script>
 	</body>
 </html>
