--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -9,8 +9,7 @@
 		<meta name="keywords" content="nested, accordion, simple, vertical, web development, css3, javascript" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/default.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<script src="js/scripts.js"></script>
 	</head>
 	<body>
