--- a/ViewModeSwitch/index.html
+++ b/ViewModeSwitch/index.html
@@ -9,8 +9,7 @@
 		<meta name="keywords" content="view mode, switch, css, style, grid, list, template" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/default.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<script src="js/scripts.js"></script>
 	</head>
 	<body>
