put the desktop css items in desktop.css

--- a/VerticalTimeline/index.html
+++ b/VerticalTimeline/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<link rel="stylesheet" type="text/css" href="css/mobile.css" />
 		<link rel="stylesheet" type="text/css" href="css/tablet.css" />
-		<link rel="stylesheet" type="text/css" href="css/desktop.css" />
+		<link rel="stylesheet" type="text/css" media="(min-width: 55em)" href="css/desktop.css" />
 		<script src="js/modernizr.custom.js"></script>
 	</head>
 	<body>
