--- a/VerticalTimeline/index.html
+++ b/VerticalTimeline/index.html
@@ -10,8 +10,8 @@
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
-		<link rel="stylesheet" type="text/css" href="css/mobile.css" />
-		<link rel="stylesheet" type="text/css" href="css/tablet.css" />
+		<link rel="stylesheet" type="text/css" media="(max-width: 30em)" href="css/mobile.css" />
+		<link rel="stylesheet" type="text/css" media="(min-width: 30em)" href="css/tablet.css" />
 		<link rel="stylesheet" type="text/css" media="(min-width: 55em)" href="css/desktop.css" />
 		<script src="js/modernizr.custom.js"></script>
 	</head>
