skitch house keeping and base index.html

--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -18,6 +18,12 @@
         <header>
           <h4>BLUEPRINT</h4>
           <h1>Nested Accordion</h1>
+          <nav>
+            <a href="#place_holder1">link1</a>
+            <a href="#place_holder2">link2</a>
+            <a href="#place_holder2">link3</a>
+            <a href="#place_holder2">link4</a>
+          </nav>
         </header>
         <ul>
             <li><h2>Oat cake tootsie roll</h2>
