house cleaning and starting point for MCF sassing

--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -23,7 +23,8 @@
             <a href="#place_holder2">link2</a>
             <a href="#place_holder2">link3</a>
             <a href="#place_holder2">link4</a>
-          </nav>
+          </nav>s
+          
         </header>
         <ul>
             <li><h2>Oat cake tootsie roll</h2>
