columns for MCF via sass

--- a/MultiColumnForm/index.html
+++ b/MultiColumnForm/index.html
@@ -18,10 +18,12 @@
         <header>
           <h4>BLUEPRINT</h4>
           <h2>Responsive Multi-Column Form</h2>
-          <a href="placeholder1">link1</a>
-          <a href="placeholder2">link2</a>
-          <a href="placeholder3">link3</a>
-          <a href="placeholder4">link4</a>
+          <nav>
+            <a href="placeholder1">link1</a>
+            <a href="placeholder2">link2</a>
+            <a href="placeholder3">link3</a>
+            <a href="placeholder4">link4</a>
+          </nav>
         </header>
         <form>
           <section>
