--- a/ViewModeSwitch/index.html
+++ b/ViewModeSwitch/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" media="(max-width: 47em)" type="text/css" href="css/mobile.css" />
 		<link rel="stylesheet" media="(min-width: 47em)" type="text/css" href="css/tablet.css" />
 		<link rel="stylesheet" media="(min-width: 55em)" type="text/css" href="css/desktop.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="js/scripts.js"></script>
 	</head>
 	<body>
