--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -12,18 +12,19 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="js/main.js"></script>
     </head>
     <body>
         <header>
           <h4>BLUEPRINT</h4>
           <h1>Nested Accordion</h1>
-          <nav>
+          <!-- <nav>
             <a href="#place_holder1">link1</a>
             <a href="#place_holder2">link2</a>
             <a href="#place_holder2">link3</a>
             <a href="#place_holder2">link4</a>
-          </nav>
+          </nav> -->
 
         </header>
         <ul>
@@ -35,12 +36,12 @@
                     <p>Chicory, turkish single origin filter at foam aftertaste. Iced, single origin, french press single origin, cinnamon brewed saucer white steamed. Foam, doppio caffeine ut breve redeye roast single origin ristretto. And sit whipped, cream flavour aromatic mocha sit flavour. Cultivar, cup turkish caffeine, aromatic con panna, grounds mazagran aroma bar mug strong.
                     </p>
                   </li>
-                  <li><h3>CARROT CAKE</h3>
-                    <p>Dark, acerbic aroma, decaffeinated single origin organic roast cultivar est froth steamed. Con panna frappuccino ristretto coffee single shot viennese dripper viennese. Strong ut galão cinnamon, froth medium, single shot, cappuccino eu qui crema organic. Shop, and, café au lait affogato, single shot sugar white crema single shot foam. Body single shot, coffee mug, extra espresso sit steamed so milk.
+                  <li class="closed"><h3 class="closed">CARROT CAKE</h3>
+                    <p class="closed">Dark, acerbic aroma, decaffeinated single origin organic roast cultivar est froth steamed. Con panna frappuccino ristretto coffee single shot viennese dripper viennese. Strong ut galão cinnamon, froth medium, single shot, cappuccino eu qui crema organic. Shop, and, café au lait affogato, single shot sugar white crema single shot foam. Body single shot, coffee mug, extra espresso sit steamed so milk.
                     </p>
                   </li>
-                  <li><h3>TOOTSIE ROLL MARSHMALLOW</h3>
-                    <p>Decaffeinated at beans doppio cultivar chicory mocha galão a fair trade medium. Kopi-luwak so saucer bar et grounds roast café au lait. Viennese cinnamon ut lungo doppio galão aftertaste. Flavour turkish, fair trade robust espresso chicory grinder body sit wings turkish. Trifecta decaffeinated aroma café au lait id arabica caramelization trifecta aftertaste irish extraction.
+                  <li class="closed"><h3 class="closed">TOOTSIE ROLL MARSHMALLOW</h3>
+                    <p class="closed">Decaffeinated at beans doppio cultivar chicory mocha galão a fair trade medium. Kopi-luwak so saucer bar et grounds roast café au lait. Viennese cinnamon ut lungo doppio galão aftertaste. Flavour turkish, fair trade robust espresso chicory grinder body sit wings turkish. Trifecta decaffeinated aroma café au lait id arabica caramelization trifecta aftertaste irish extraction.
                     </p>
                   </li>
                 </ul>
