first name input and submit button working

--- a/MultiColumnForm/index.html
+++ b/MultiColumnForm/index.html
@@ -13,17 +13,18 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </head>
     <body>
         <header>
           <h4>BLUEPRINT</h4>
           <h1>Responsive Multi-Column Form</h1>
-          <nav>
+          <!-- <nav>
             <a href="placeholder1">link1</a>
             <a href="placeholder2">link2</a>
             <a href="placeholder3">link3</a>
             <a href="placeholder4">link4</a>
-          </nav>
+          </nav> -->
         </header>
         <form>
           <section>
