inputs, select boxes, and textareas working now

--- a/MultiColumnForm/index.html
+++ b/MultiColumnForm/index.html
@@ -33,9 +33,10 @@
             <label>Email Address<input type="text" name="email"/></label>
             <label>
               Country
-                <select name="Country">
-                  <option value="France">Frace</option>
-                  <option value="Italy" selected>Italy</option>
+                <select name="country">
+                  <option value="not provided" selected>Choose a country</option>
+                  <option value="France">France</option>
+                  <option value="Italy">Italy</option>
                   <option value="Portugal">Portugal</option>
                 </select>
             </label>
@@ -53,9 +54,10 @@
             </label>
             <label>
               Occupation
-                <select name="Occupation">
+                <select name="occupation">
+                  <option value="not provided" selected>Choose an occupation</option>
                   <option value="web_designer">Web Designer</option>
-                  <option value="web_developer" selected>Web Developer</option>
+                  <option value="web_developer">Web Developer</option>
                   <option value="Hybrid">Hybrid</option>
                 </select>
             </label>
@@ -66,8 +68,9 @@
             <label>
               Type of Talent
                 <select name="talent">
+                  <option value="not provided" selected>Choose a talent</option>
                   <option value="ninja_silence">Ninja Silence</option>
-                  <option value="sumo_power" selected>Sumo Power</option>
+                  <option value="sumo_power">Sumo Power</option>
                   <option value="samurai_precision">Samurai Precision</option>
                 </select>
             </label>
