basic js working

--- a/DropDownMenu/index.html
+++ b/DropDownMenu/index.html
@@ -24,12 +24,12 @@
       <main>
         <nav>
           <a href="#products">Products</a>
-          <a href="#">Downloads</a>
-          <a href="#">Application</a>
-          <a href="#">Projects</a>
-          <a href="#">Freeware</a>
+          <a href="#downloads">Downloads</a>
+          <a href="#applicatons">Application</a>
+          <a href="#projects">Projects</a>
+          <a href="#freeware">Freeware</a>
         </nav>
-        <section id="products" class="active">
+        <section id="products">
           <ul>
             <h3>Learning & Games</h3>
             <li><a href="#">Catch the Bullet</a></li>
