--- a/DropDownMenu/index.html
+++ b/DropDownMenu/index.html
@@ -25,7 +25,7 @@
         <nav>
           <a href="#products">Products</a>
           <a href="#downloads">Downloads</a>
-          <a href="#applicatons">Application</a>
+          <a href="#applications">Applications</a>
           <a href="#projects">Projects</a>
           <a href="#freeware">Freeware</a>
         </nav>
