finished adding content to index.html

--- a/DropDownMenu/index.html
+++ b/DropDownMenu/index.html
@@ -17,10 +17,10 @@
 
     </head>
     <body>
-      <heading>
+      <header>
         <h2>BLUEPRINT</h2>
         <h1>Horizontal Drop-Down Menu</h1>
-      </heading>
+      </header>
       <main>
         <nav>
           <a href="#products">Products</a>
@@ -29,78 +29,148 @@
           <a href="#projects">Projects</a>
           <a href="#freeware">Freeware</a>
         </nav>
-        <section id="products">
-          <ul>
-            <h3>Learning & Games</h3>
-            <li><a href="#">Catch the Bullet</a></li>
-            <li><a href="#">Snoopydoo</a></li>
-            <li><a href="#">Fallen Angel</a></li>
-            <li><a href="#">Sui Maker</a></li>
-            <li><a href="#">Wave Master</a></li>
-            <li><a href="#">Golf Pro</a></li>
-          </ul>
-          <ul>
-            <h3>Utilities</h3>
-            <li><a href="#">Gadget Finder</a></li>
-            <li><a href="#">Green Tree Express</a></li>
-            <li><a href="#">Green Tree Pro</a></li>
-            <li><a href="#">Wobbler 3.0</a></li>
-            <li><a href="#">Coolkid</a></li>
-          </ul>
-          <ul>
-            <h3>Education</h3>
-            <li><a href="#">Learn Thai</a></li>
-            <li><a href="#">Math Genius</a></li>
-            <li><a href="#">Chemokid</a></li>
-          </ul>
-          <ul>
-            <h3>Professionals</h3>
-            <li><a href="#">Success 1.0</a></li>
-            <li><a href="#">Moneymaker</a></li>
-          </ul>
-        </section>  <!-- end products section -->
-        <section id="downloads">
-          <ul>
-            <h3>Education & Learning</h3>
-            <li><a href="#">Learn Thai</a></li>
-            <li><a href="#">Math Genius</a></li>
-            <li><a href="#">Chemokid</a></li>
-          </ul>
-          <ul>
-            <h3>Professionals</h3>
-            <li><a href="#">Success 1.0</a></li>
-            <li><a href="#">Moneymaker</a></li>
-          </ul>
-          <ul>
-            <h3>Entertainment</h3>
-            <li><a href="#">Gadget Finder</a></li>
-            <li><a href="#">Green Tree Express</a></li>
-            <li><a href="#">Green Tree Pro</a></li>
-            <li><a href="#">Holy Cannoli</a></li>
-            <li><a href="#">Wobbler 3.0</a></li>
-            <li><a href="#">Coolkid</a></li>
-          </ul>
-          <ul>
-            <h3>Games</h3>
-            <li><a href="#">Catch the Bullet</a></li>
-            <li><a href="#">Snoopydoo</a></li>
-            <li><a href="#">Fallen Angel</a></li>
-            <li><a href="#">Sui Maker</a></li>
-            <li><a href="#">Wave Master</a></li>
-            <li><a href="#">Golf Pro</a></li>
-          </ul>
-        </section>  <!-- end downloads section -->
-        <section id="applications">
-        </section>  <!-- end applications section -->
-        <section id="projects">
-        </section> <!-- end projects section -->
-        <section id="freeware">
-        </section> <!-- end freeward section -->
+          <section id="products">
+            <ul>
+              <h3>Learning & Games</h3>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+              <li><a href="#">Fallen Angel</a></li>
+              <li><a href="#">Sui Maker</a></li>
+              <li><a href="#">Wave Master</a></li>
+              <li><a href="#">Golf Pro</a></li>
+            </ul>
+            <ul>
+              <h3>Utilities</h3>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+            <ul>
+              <h3>Education</h3>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <h3>Professionals</h3>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+          </section>  <!-- end products section -->
+          <section id="downloads">
+            <ul>
+              <h3>Education & Learning</h3>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <h3>Professionals</h3>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+            <ul>
+              <h3>Entertainment</h3>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Holy Cannoli</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+            <ul>
+              <h3>Games</h3>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+              <li><a href="#">Fallen Angel</a></li>
+              <li><a href="#">Sui Maker</a></li>
+              <li><a href="#">Wave Master</a></li>
+              <li><a href="#">Golf Pro</a></li>
+            </ul>
+          </section>  <!-- end downloads section -->
+          <section id="applications">
+            <ul>
+              <h3>Learning & Games</h3>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+            </ul>
+            <ul>
+              <h3>Utilities</h3>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+            <ul>
+              <h3>Education</h3>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <h3>Professionals</h3>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+          </section>  <!-- end applications section -->
+          <section id="projects">
+            <ul>
+                <h3>Learning & Games</h3>
+                <li><a href="#">Catch the Bullet</a></li>
+                <li><a href="#">Snoopydoo</a></li>
+                <li><a href="#"></a>Fallen Angel</li>
+                <li><a href="#">Sui Maker</a></li>
+                <li><a href="#">Wave Master</a></li>
+                <li><a href="#">Golf Pro</a></li>
+            </ul>
+            <ul>
+              <h3>Utilities</h3>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+            </ul>
+            <ul>
+              <h3>Entertainment</h3>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Holy Cannoli</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+          </section> <!-- end projects section -->
+          <section id="freeware">
+            <ul>
+                <h3>Utilities</h3>
+                <li><a href="#">Green Tree Pro</a></li>
+                <li><a href="#">Wobbler 3.0</a></li>
+                <li><a href="#">Coolkid</a></li>
+            </ul>
+            <ul>
+              <h3>Education</h3>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <h3>Professionals</h3>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+            <ul>
+              <h3></h3>
+              <li><a href="#">Learning & Games</a></li>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+              <li><a href="#">Fallen Angel</a></li>
+              <li><a href="#">Sui Maker</a></li>
+              <li><a href="#">Wave Master</a></li>
+              <li><a href="#">Golf Pro</a></li>
+            </ul>
+          </section> <!-- end freeward section -->
       </main>
-
-
-
-
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
