--- a/ResponsiveIcons/index.html
+++ b/ResponsiveIcons/index.html
@@ -17,6 +17,32 @@
 
     </head>
     <body>
+      <section class="grid">
+        <section class="col-1-12">
+          <h3>1</h3>
+        </section>
+        <section class="col-1-12">
+          <h3>2</h3>
+        </section>
+        <section class="col-1-12">
+          <h3>3</h3>
+        </section>
+        <section class="col-1-12">
+          <h3>4</h3>
+        </section>
+        <section class="col-1-12">
+          <h3>5</h3>
+        </section>
+        <section class="col-1-12">
+          <h3>6</h3>
+        </section>
+      </section>
+
+
+
+
+
+
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
