MF version complete

--- a/ResponsiveIcons/index.html
+++ b/ResponsiveIcons/index.html
@@ -17,25 +17,37 @@
 
     </head>
     <body>
+      <header>
+          <h2>BLUEPRINT</h3>
+          <h1>Responsive Icon Grid</h1>
+      </header>
       <section class="grid">
-        <section class="col-1-12">
-          <h3>1</h3>
-        </section>
-        <section class="col-1-12">
-          <h3>2</h3>
-        </section>
-        <section class="col-1-12">
-          <h3>3</h3>
-        </section>
-        <section class="col-1-12">
-          <h3>4</h3>
-        </section>
-        <section class="col-1-12">
-          <h3>5</h3>
-        </section>
-        <section class="col-1-12">
-          <h3>6</h3>
-        </section>
+        <ul>
+          <li><a href="#">
+            <h3>Squid voluptate</h3>
+            <h4>FASHION</h4>
+          </a></li>
+          <li><a href="#">
+            <h3>Mixtape lo-fi</h3>
+            <h4>DESIGN</h4>
+          </a></li>
+          <li><a href="#">
+            <h3>Cosby sweater</h3>
+            <h4>LIFESTYLE</h4>
+          </a></li>
+          <li><a href="#">
+            <h3>Commodo</h3>
+            <h4>FOOD</h4>
+          </a></li>
+          <li><a href="#">
+            <h3>Bitters kitsch</h3>
+            <h4>GADGETS</h4>
+          </a></li>
+          <li><a href="#">
+            <h3>Austin proident</h3>
+            <h4>MUSIC</h4>
+          </a></li>
+        </ul>
       </section>
 
 
