--- a/ResponsiveIcons/index.html
+++ b/ResponsiveIcons/index.html
@@ -23,30 +23,36 @@
       </header>
       <section class="grid">
         <ul>
-          <li><a href="#">
+          <li>
+            <span class="shoe">&#x2668</span>
             <h3>Squid voluptate</h3>
             <h4>FASHION</h4>
-          </a></li>
-          <li><a href="#">
+          </li>
+          <li>
+            <span class="shoe">&#x2668</span>
             <h3>Mixtape lo-fi</h3>
             <h4>DESIGN</h4>
-          </a></li>
-          <li><a href="#">
+          </li>
+          <li>
+            <span class="shoe">&#x2668</span>
             <h3>Cosby sweater</h3>
             <h4>LIFESTYLE</h4>
-          </a></li>
-          <li><a href="#">
+          </li>
+          <li>
+            <span class="shoe">&#x2668</span>
             <h3>Commodo</h3>
             <h4>FOOD</h4>
-          </a></li>
-          <li><a href="#">
+          </li>
+          <li>
+            <span class="shoe">&#x2668</span>
             <h3>Bitters kitsch</h3>
             <h4>GADGETS</h4>
-          </a></li>
-          <li><a href="#">
+          </li>
+          <li>
+            <span class="shoe">&#x2668</span>
             <h3>Austin proident</h3>
             <h4>MUSIC</h4>
-          </a></li>
+          </li>
         </ul>
       </section>
 
