added horizontal lines

--- a/ResponsiveIcons/index.html
+++ b/ResponsiveIcons/index.html
@@ -25,32 +25,44 @@
         <ul>
           <li>
             <span class="shoe">&#x2668</span>
+            <hr class="above-title">
             <h3>Squid voluptate</h3>
+            <hr class="below-title">
             <h4>FASHION</h4>
           </li>
           <li>
             <span class="shoe">&#x2702</span>
+            <hr class="above-title">
             <h3>Mixtape lo-fi</h3>
+            <hr class="below-title">
             <h4>DESIGN</h4>
           </li>
           <li>
             <span class="shoe">&#x2744</span>
+            <hr class="above-title">
             <h3>Cosby sweater</h3>
+            <hr class="below-title">
             <h4>LIFESTYLE</h4>
           </li>
           <li>
             <span class="shoe">&#x2660</span>
+            <hr class="above-title">
             <h3>Commodo</h3>
+            <hr class="below-title">
             <h4>FOOD</h4>
           </li>
           <li>
             <span class="shoe">&#x2791</span>
+            <hr class="above-title">
             <h3>Bitters kitsch</h3>
+            <hr class="below-title">
             <h4>GADGETS</h4>
           </li>
           <li>
             <span class="shoe">&#x2708</span>
+            <hr class="above-title">
             <h3>Austin proident</h3>
+            <hr class="below-title">
             <h4>MUSIC</h4>
           </li>
         </ul>
