--- a/DropDownMenu/index.html
+++ b/DropDownMenu/index.html
@@ -31,7 +31,7 @@
         </nav>
           <section id="products">
             <ul>
-              <h3>Learning & Games</h3>
+              <li><h3>Learning & Games</h3></li>
               <li><a href="#">Catch the Bullet</a></li>
               <li><a href="#">Snoopydoo</a></li>
               <li><a href="#">Fallen Angel</a></li>
@@ -40,7 +40,7 @@
               <li><a href="#">Golf Pro</a></li>
             </ul>
             <ul>
-              <h3>Utilities</h3>
+              <li><h3>Utilities</h3></li>
               <li><a href="#">Gadget Finder</a></li>
               <li><a href="#">Green Tree Express</a></li>
               <li><a href="#">Green Tree Pro</a></li>
@@ -48,31 +48,31 @@
               <li><a href="#">Coolkid</a></li>
             </ul>
             <ul>
-              <h3>Education</h3>
+              <li><h3>Education</h3></li>
               <li><a href="#">Learn Thai</a></li>
               <li><a href="#">Math Genius</a></li>
               <li><a href="#">Chemokid</a></li>
             </ul>
             <ul>
-              <h3>Professionals</h3>
+              <li><h3>Professionals</h3></li>
               <li><a href="#">Success 1.0</a></li>
               <li><a href="#">Moneymaker</a></li>
             </ul>
           </section>  <!-- end products section -->
           <section id="downloads">
             <ul>
-              <h3>Education & Learning</h3>
+              <li><h3>Education & Learning</h3></li>
               <li><a href="#">Learn Thai</a></li>
               <li><a href="#">Math Genius</a></li>
               <li><a href="#">Chemokid</a></li>
             </ul>
             <ul>
-              <h3>Professionals</h3>
+              <li><h3>Professionals</h3></li>
               <li><a href="#">Success 1.0</a></li>
               <li><a href="#">Moneymaker</a></li>
             </ul>
             <ul>
-              <h3>Entertainment</h3>
+              <li><h3>Entertainment</h3></li>
               <li><a href="#">Gadget Finder</a></li>
               <li><a href="#">Green Tree Express</a></li>
               <li><a href="#">Green Tree Pro</a></li>
@@ -81,7 +81,7 @@
               <li><a href="#">Coolkid</a></li>
             </ul>
             <ul>
-              <h3>Games</h3>
+              <li><h3>Games</h3></li>
               <li><a href="#">Catch the Bullet</a></li>
               <li><a href="#">Snoopydoo</a></li>
               <li><a href="#">Fallen Angel</a></li>
@@ -92,12 +92,12 @@
           </section>  <!-- end downloads section -->
           <section id="applications">
             <ul>
-              <h3>Learning & Games</h3>
+              <li><h3>Learning & Games</h3></li>
               <li><a href="#">Catch the Bullet</a></li>
               <li><a href="#">Snoopydoo</a></li>
             </ul>
             <ul>
-              <h3>Utilities</h3>
+              <li><h3>Utilities</h3></li>
               <li><a href="#">Gadget Finder</a></li>
               <li><a href="#">Green Tree Express</a></li>
               <li><a href="#">Green Tree Pro</a></li>
@@ -105,20 +105,20 @@
               <li><a href="#">Coolkid</a></li>
             </ul>
             <ul>
-              <h3>Education</h3>
+              <li><h3>Education</h3></li>
               <li><a href="#">Learn Thai</a></li>
               <li><a href="#">Math Genius</a></li>
               <li><a href="#">Chemokid</a></li>
             </ul>
             <ul>
-              <h3>Professionals</h3>
+              <li><h3>Professionals</h3></li>
               <li><a href="#">Success 1.0</a></li>
               <li><a href="#">Moneymaker</a></li>
             </ul>
           </section>  <!-- end applications section -->
           <section id="projects">
             <ul>
-                <h3>Learning & Games</h3>
+                <li><h3>Learning & Games</h3></li>
                 <li><a href="#">Catch the Bullet</a></li>
                 <li><a href="#">Snoopydoo</a></li>
                 <li><a href="#"></a>Fallen Angel</li>
@@ -127,12 +127,12 @@
                 <li><a href="#">Golf Pro</a></li>
             </ul>
             <ul>
-              <h3>Utilities</h3>
+              <li><h3>Utilities</h3></li>
               <li><a href="#">Gadget Finder</a></li>
               <li><a href="#">Green Tree Express</a></li>
             </ul>
             <ul>
-              <h3>Entertainment</h3>
+              <li><h3>Entertainment</h3></li>
               <li><a href="#">Gadget Finder</a></li>
               <li><a href="#">Green Tree Express</a></li>
               <li><a href="#">Green Tree Pro</a></li>
@@ -143,25 +143,24 @@
           </section> <!-- end projects section -->
           <section id="freeware">
             <ul>
-                <h3>Utilities</h3>
+                <li><h3>Utilities</h3></li>
                 <li><a href="#">Green Tree Pro</a></li>
                 <li><a href="#">Wobbler 3.0</a></li>
                 <li><a href="#">Coolkid</a></li>
             </ul>
             <ul>
-              <h3>Education</h3>
+              <li><h3>Education</h3></li>
               <li><a href="#">Learn Thai</a></li>
               <li><a href="#">Math Genius</a></li>
               <li><a href="#">Chemokid</a></li>
             </ul>
             <ul>
-              <h3>Professionals</h3>
+              <li><h3>Professionals</h3></li>
               <li><a href="#">Success 1.0</a></li>
               <li><a href="#">Moneymaker</a></li>
             </ul>
             <ul>
-              <h3></h3>
-              <li><a href="#">Learning & Games</a></li>
+              <li><h3>Learning & Games</h3></li>
               <li><a href="#">Catch the Bullet</a></li>
               <li><a href="#">Snoopydoo</a></li>
               <li><a href="#">Fallen Angel</a></li>
