--- a/DropDownMenu/index.html
+++ b/DropDownMenu/index.html
@@ -23,152 +23,159 @@
       </header>
       <main>
         <nav>
-          <a href="#products">Products</a>
-          <a href="#downloads">Downloads</a>
-          <a href="#applications">Applications</a>
-          <a href="#projects">Projects</a>
-          <a href="#freeware">Freeware</a>
+          <a href="#products" class="grid">Products</a>
+          <a href="#downloads" class="grid">Downloads</a>
+          <a href="#applications" class="grid">Applications</a>
+          <a href="#projects" class="grid">Projects</a>
+          <a href="#freeware" class="grid">Freeware</a>
         </nav>
-            <section id="products">
-              <ul>
+        <div class="content">
+          <span><a href="#products" class="list">Products</a></span>
+          <section id="products">
+            <ul>
+              <li><h3>Learning & Games</h3></li>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+              <li><a href="#">Fallen Angel</a></li>
+              <li><a href="#">Sui Maker</a></li>
+              <li><a href="#">Wave Master</a></li>
+              <li><a href="#">Golf Pro</a></li>
+            </ul>
+            <ul>
+              <li><h3>Utilities</h3></li>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+            <ul>
+              <li><h3>Education</h3></li>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <li><h3>Professionals</h3></li>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+          </section>  <!-- end products section -->
+          <span><a href="#downloads" class="list">Downloads</a></span>
+          <section id="downloads">
+            <ul>
+              <li><h3>Education & Learning</h3></li>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <li><h3>Professionals</h3></li>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+            <ul>
+              <li><h3>Entertainment</h3></li>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Holy Cannoli</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+            <ul>
+              <li><h3>Games</h3></li>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+              <li><a href="#">Fallen Angel</a></li>
+              <li><a href="#">Sui Maker</a></li>
+              <li><a href="#">Wave Master</a></li>
+              <li><a href="#">Golf Pro</a></li>
+            </ul>
+          </section>  <!-- end downloads section -->
+          <span><a href="#applications" class="list">Applications</a></span>
+          <section id="applications">
+            <ul>
+              <li><h3>Learning & Games</h3></li>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+            </ul>
+            <ul>
+              <li><h3>Utilities</h3></li>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+            <ul>
+              <li><h3>Education</h3></li>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <li><h3>Professionals</h3></li>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+          </section>  <!-- end applications section -->
+          <span><a href="#projects" class="list">Projects</a></span>
+          <section id="projects">
+            <ul>
                 <li><h3>Learning & Games</h3></li>
                 <li><a href="#">Catch the Bullet</a></li>
                 <li><a href="#">Snoopydoo</a></li>
-                <li><a href="#">Fallen Angel</a></li>
+                <li><a href="#"></a>Fallen Angel</li>
                 <li><a href="#">Sui Maker</a></li>
                 <li><a href="#">Wave Master</a></li>
                 <li><a href="#">Golf Pro</a></li>
-              </ul>
-              <ul>
+            </ul>
+            <ul>
+              <li><h3>Utilities</h3></li>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+            </ul>
+            <ul>
+              <li><h3>Entertainment</h3></li>
+              <li><a href="#">Gadget Finder</a></li>
+              <li><a href="#">Green Tree Express</a></li>
+              <li><a href="#">Green Tree Pro</a></li>
+              <li><a href="#">Holy Cannoli</a></li>
+              <li><a href="#">Wobbler 3.0</a></li>
+              <li><a href="#">Coolkid</a></li>
+            </ul>
+          </section> <!-- end projects section -->
+          <span><a href="#freeware" class="list">Freeware</a></span>
+          <section id="freeware">
+            <ul>
                 <li><h3>Utilities</h3></li>
-                <li><a href="#">Gadget Finder</a></li>
-                <li><a href="#">Green Tree Express</a></li>
                 <li><a href="#">Green Tree Pro</a></li>
                 <li><a href="#">Wobbler 3.0</a></li>
                 <li><a href="#">Coolkid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Education</h3></li>
-                <li><a href="#">Learn Thai</a></li>
-                <li><a href="#">Math Genius</a></li>
-                <li><a href="#">Chemokid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Professionals</h3></li>
-                <li><a href="#">Success 1.0</a></li>
-                <li><a href="#">Moneymaker</a></li>
-              </ul>
-            </section>  <!-- end products section -->
-            <section id="downloads">
-              <ul>
-                <li><h3>Education & Learning</h3></li>
-                <li><a href="#">Learn Thai</a></li>
-                <li><a href="#">Math Genius</a></li>
-                <li><a href="#">Chemokid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Professionals</h3></li>
-                <li><a href="#">Success 1.0</a></li>
-                <li><a href="#">Moneymaker</a></li>
-              </ul>
-              <ul>
-                <li><h3>Entertainment</h3></li>
-                <li><a href="#">Gadget Finder</a></li>
-                <li><a href="#">Green Tree Express</a></li>
-                <li><a href="#">Green Tree Pro</a></li>
-                <li><a href="#">Holy Cannoli</a></li>
-                <li><a href="#">Wobbler 3.0</a></li>
-                <li><a href="#">Coolkid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Games</h3></li>
-                <li><a href="#">Catch the Bullet</a></li>
-                <li><a href="#">Snoopydoo</a></li>
-                <li><a href="#">Fallen Angel</a></li>
-                <li><a href="#">Sui Maker</a></li>
-                <li><a href="#">Wave Master</a></li>
-                <li><a href="#">Golf Pro</a></li>
-              </ul>
-            </section>  <!-- end downloads section -->
-            <section id="applications">
-              <ul>
-                <li><h3>Learning & Games</h3></li>
-                <li><a href="#">Catch the Bullet</a></li>
-                <li><a href="#">Snoopydoo</a></li>
-              </ul>
-              <ul>
-                <li><h3>Utilities</h3></li>
-                <li><a href="#">Gadget Finder</a></li>
-                <li><a href="#">Green Tree Express</a></li>
-                <li><a href="#">Green Tree Pro</a></li>
-                <li><a href="#">Wobbler 3.0</a></li>
-                <li><a href="#">Coolkid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Education</h3></li>
-                <li><a href="#">Learn Thai</a></li>
-                <li><a href="#">Math Genius</a></li>
-                <li><a href="#">Chemokid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Professionals</h3></li>
-                <li><a href="#">Success 1.0</a></li>
-                <li><a href="#">Moneymaker</a></li>
-              </ul>
-            </section>  <!-- end applications section -->
-            <section id="projects">
-              <ul>
-                  <li><h3>Learning & Games</h3></li>
-                  <li><a href="#">Catch the Bullet</a></li>
-                  <li><a href="#">Snoopydoo</a></li>
-                  <li><a href="#"></a>Fallen Angel</li>
-                  <li><a href="#">Sui Maker</a></li>
-                  <li><a href="#">Wave Master</a></li>
-                  <li><a href="#">Golf Pro</a></li>
-              </ul>
-              <ul>
-                <li><h3>Utilities</h3></li>
-                <li><a href="#">Gadget Finder</a></li>
-                <li><a href="#">Green Tree Express</a></li>
-              </ul>
-              <ul>
-                <li><h3>Entertainment</h3></li>
-                <li><a href="#">Gadget Finder</a></li>
-                <li><a href="#">Green Tree Express</a></li>
-                <li><a href="#">Green Tree Pro</a></li>
-                <li><a href="#">Holy Cannoli</a></li>
-                <li><a href="#">Wobbler 3.0</a></li>
-                <li><a href="#">Coolkid</a></li>
-              </ul>
-            </section> <!-- end projects section -->
-            <section id="freeware">
-              <ul>
-                  <li><h3>Utilities</h3></li>
-                  <li><a href="#">Green Tree Pro</a></li>
-                  <li><a href="#">Wobbler 3.0</a></li>
-                  <li><a href="#">Coolkid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Education</h3></li>
-                <li><a href="#">Learn Thai</a></li>
-                <li><a href="#">Math Genius</a></li>
-                <li><a href="#">Chemokid</a></li>
-              </ul>
-              <ul>
-                <li><h3>Professionals</h3></li>
-                <li><a href="#">Success 1.0</a></li>
-                <li><a href="#">Moneymaker</a></li>
-              </ul>
-              <ul>
-                <li><h3>Learning & Games</h3></li>
-                <li><a href="#">Catch the Bullet</a></li>
-                <li><a href="#">Snoopydoo</a></li>
-                <li><a href="#">Fallen Angel</a></li>
-                <li><a href="#">Sui Maker</a></li>
-                <li><a href="#">Wave Master</a></li>
-                <li><a href="#">Golf Pro</a></li>
-              </ul>
-            </section> <!-- end freeward section -->
+            </ul>
+            <ul>
+              <li><h3>Education</h3></li>
+              <li><a href="#">Learn Thai</a></li>
+              <li><a href="#">Math Genius</a></li>
+              <li><a href="#">Chemokid</a></li>
+            </ul>
+            <ul>
+              <li><h3>Professionals</h3></li>
+              <li><a href="#">Success 1.0</a></li>
+              <li><a href="#">Moneymaker</a></li>
+            </ul>
+            <ul>
+              <li><h3>Learning & Games</h3></li>
+              <li><a href="#">Catch the Bullet</a></li>
+              <li><a href="#">Snoopydoo</a></li>
+              <li><a href="#">Fallen Angel</a></li>
+              <li><a href="#">Sui Maker</a></li>
+              <li><a href="#">Wave Master</a></li>
+              <li><a href="#">Golf Pro</a></li>
+            </ul>
+          </section> <!-- end freeward section -->
+        </div>
       </main>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
