--- a/DropDownMenu/index.html
+++ b/DropDownMenu/index.html
@@ -13,7 +13,10 @@
         <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <!-- <script src="bower_components/modernizr/bin/modernizr"></script> -->
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
+        </script>
 
     </head>
     <body>
@@ -182,7 +185,8 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <!-- <script src="bower_components/jquery/dist/jquery.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
