--- a/DropDownMenu/index.html
+++ b/DropDownMenu/index.html
@@ -10,7 +10,8 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+        <!-- <link rel="stylesheet" href="bower_components/normalize-css/normalize.css"> -->
+        <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
         <link rel="stylesheet" href="css/main.css">
         <!-- <script src="bower_components/modernizr/bin/modernizr"></script> -->
         <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
