--- a/ViewModeSwitch/index.html
+++ b/ViewModeSwitch/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Blueprint: View Mode Switch</title>
+		<title>View Mode Switch</title>
 		<meta name="description" content="Blueprint: View Mode Switch" />
 		<meta name="keywords" content="view mode, switch, css, style, grid, list, template" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
+		<!-- <link rel="shortcut icon" href="../favicon.ico"> -->
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<link rel="stylesheet" media="(max-width: 47em)" type="text/css" href="css/mobile.css" />
 		<link rel="stylesheet" media="(min-width: 47em)" type="text/css" href="css/tablet.css" />
